--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
             <a href="#">登录</a>
         </div>
         <div class="reg_form clearfix">
-            <form method="post" action="/user/register_handle/">
+            <form method="post" action="/user/register/">
                 {% csrf_token %}
                 <ul>
                     <li>
@@ -74,8 +74,8 @@
         <span>|</span>
         <a href="#">友情链接</a>
     </div>
-    <p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-    <p>电话：010-****888 京ICP备*******8号</p>
+    <p>CopyRight © 2018 梦飞网络有限公司 All Rights Reserved</p>
+    <p>电话：0394-****888 豫ICP备*******8号</p>
 </div>
 
 </body>
