--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
             <div class="login_form fr">
                 <div class="login_title clearfix">
                     <h1>用户登录</h1>
-                    <a href="#">立即注册</a>
+                    <a href="{% url 'user:register' %}">立即注册</a>
                 </div>
                 <div class="form_input">
                     {# 不设置表单action时, 提交表单时, 回想游览器地址中的地址提交数据 #}
