--- a/templates/static_index.html
+++ b/templates/static_index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'static_base.html' %}
 {% load staticfiles %}
 {% block title %}天天生鲜-首页{% endblock title %}
 {% block topfiles %}
@@ -11,7 +11,7 @@
         <div class="navbar">
             <h1 class="fl">全部商品分类</h1>
             <ul class="navlist fl">
-                <li><a href="{% url 'goods:index' %}">首页</a></li>
+                <li><a href="">首页</a></li>
                 <li class="interval">|</li>
                 <li><a href="">手机生鲜</a></li>
                 <li class="interval">|</li>
@@ -29,7 +29,7 @@
         <div class="slide fl">
             <ul class="slide_pics">
                 {% for banner in goods_banners %}
-                    <li><a href="{% url 'goods:list' banner.sku.type.id 1 %}"><img src="{{ banner.image.url }}" alt="幻灯片"></a></li>
+                    <li><a href="#"><img src="{{ banner.image.url }}" alt="幻灯片"></a></li>
                 {% endfor %}
             </ul>
             <div class="prev"></div>
@@ -50,10 +50,10 @@
                 <div class="subtitle fl">
                     <span>|</span>
                     {% for banner in type.title_banners %}
-                        <a href="{% url 'goods:detail' banner.sku.id %}">{{ banner.sku.name }}</a>
+                        <a href="#">{{ banner.sku.name }}</a>
                     {% endfor %}
                 </div>
-                <a href="{% url 'goods:list' type.id 1 %}" class="goods_more fr" id="fruit_more">查看更多 ></a>
+                <a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
             </div>
 
             <div class="goods_con clearfix">
@@ -61,8 +61,8 @@
                 <ul class="goods_list fl">
                     {% for banner in type.image_banners %}
                         <li>
-                            <h4><a href="{% url 'goods:detail' banner.sku.id %}">{{ banner.sku.name }}</a></h4>
-                            <a href="{% url 'goods:detail' banner.sku.id %}"><img src="{{ banner.sku.image.url }}"></a>
+                            <h4><a href="#">{{ banner.sku.name }}</a></h4>
+                            <a href="#"><img src="{{ banner.sku.image.url }}"></a>
                             <div class="prize">¥ {{ banner.sku.price }}</div>
                         </li>
                     {% endfor %}
