购物车页面+创建订单完成

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -158,7 +158,7 @@
                 count = 1
             }
             // 重新设置商品的数目
-            $(this).val(parseInt(count))
+            $(this).val(parseInt(count));
             // 更新商品的总价
             update_goods_amount()
         })
